# mcp-hub

./: DOCKER_COMPLETION.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: servers.json
docker/: README.md  entrypoint.sh  healthcheck.sh
src/mcp_hub/: __init__.py  main.py
src/mcp_hub/core/: __init__.py  multitenant.py  orchestrator.py  registry.py  router.py
src/mcp_hub/gateway/: __init__.py  ui_proxy.py  websocket.py
src/mcp_hub/transport/: __init__.py  stdio_client.py
tests/: __init__.py  test_integration.py  test_multitenant.py  test_registry.py
